<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/colorWhiteGrey"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/colorWhiteGrey" />

        <EditText
            android:id="@+id/loginPassword"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/loginShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showPassword"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/loginForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/login_button"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="@color/color2"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/loginNotRegisteredYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</RelativeLayout>