<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color2"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/testActivity"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="10dp" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/question1"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/skipButton"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/stronglyAgree">

        <Button
            android:id="@+id/stronglyAgree"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/color2"
            android:text="@string/stronglyAgree"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/agree"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/color2"
            android:text="@string/agree"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/notSure"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/color2"
            android:text="@string/notSure"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/disagree"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/color2"
            android:text="@string/disagree"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/stronglyDisagree"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/color2"
            android:text="@string/stronglyDisagree"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <ImageView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/score"
        android:layout_marginLeft="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:src="@drawable/back_button"
        android:visibility="invisible"></ImageView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:indeterminate="false" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorBlack"
            app:itemIconTint="@color/colorWhite"
            app:itemTextColor="@color/colorWhite"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_navigation_menu" />
    </FrameLayout>

</RelativeLayout>