<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/colorWhiteGrey"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/registerFullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhiteGrey" />

    <EditText
        android:id="@+id/registerEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhiteGrey" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhiteGrey" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhiteGrey" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhiteGrey" />

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/color2"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerAlreadyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/alreadyUser"
        android:textColor="@color/colorWhiteGrey"
        android:textSize="15sp" />

</LinearLayout>