<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color2"
                android:gravity="center"
                android:padding="10dp"
                android:text="Resources"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!-- Clickable title -->
            <TextView
                android:id="@+id/CanadianResources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="Canadian Resources"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CanadianResourcesListDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="If you or someone you love is in need of support for problematic gaming disorder or other forms of addiction, please visit the following link for resources near you."
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <!--content to hide/show -->
            <TextView
                android:id="@+id/resource1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/resource1"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <!-- Clickable title -->
            <TextView
                android:id="@+id/OnlineResources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="Online Resources"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--content to hide/show -->
            <TextView
                android:id="@+id/resource2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/resource2"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/resource3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/resource3"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/AdditionalResources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="Additional Resources"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resource4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/resource4"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/resource5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/resource5"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:text="For more information, please talk to your family doctor."
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/colorBlack"
                    app:itemIconTint="@color/colorWhite"
                    app:itemTextColor="@color/colorWhite"
                    app:labelVisibilityMode="labeled"
                    app:menu="@menu/bottom_navigation_menu" />
            </FrameLayout>
        </LinearLayout>

</LinearLayout>